# domain-eval

./: README.md
app/: .gitignore  Dockerfile  fly.toml  main.py  pyproject.toml
app/analyzer/: anthropic_component.py  perplexity_component.py  pitch_deck_analyzer.py
app/parser/: pitch_deck_parsing.py
